--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a href = "#contact">CONTACT</a>
          </nav>
          <section id = "header">
-            <img src = "..\html-css-cheatsheet-starting\profile.jpg" />
+            <img src = "../profile.jpg" />
             <p>Professional and dedicated web developer who is highly experienced
                 in managing effective teams. Offers expertise in data marketing
                 analysis and revising websites to ensure user satisfaction. Looking to
